# enterprise-tic-tac-toe

./: README.md  tic-tac-toe-tfd.cabal
app/: Main.hs
src/: TicTacToe.hs
src/Data/: TicTacToe.hs
src/TicTacToe/: Game.hs
src/TicTacToe/Data/: Board.hs  Cell.hs  Move.hs  Token.hs
src/TicTacToe/Internal/: Matrix.hs  Move.hs  Result.hs
test/: Spec.hs
