name:                tic-tac-toe-tfd
version:             0.1.0.0
synopsis:            TicTacToe in Haskell, Enterprise Edition (inspired by https://fsharpforfunandprofit.com/posts/enterprise-tic-tac-toe/#series-toc)
description:         Please see README.md
homepage:            https://github.com/githubuser/tic-tac-toe-tfd#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TicTacToe.Data.Board
                     , TicTacToe.Data.Cell
                     , TicTacToe.Data.Move
                     , TicTacToe.Data.Token
                     , TicTacToe.Game
                     , TicTacToe.Internal.Matrix
                     , TicTacToe.Internal.Move
                     , TicTacToe.Internal.Result
                     , TicTacToe
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , transformers >= 0.4.2.0
  default-language:    Haskell2010

executable ttt
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tic-tac-toe-tfd
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       QuickCheck >= 2.8.2
                     , hspec
                     , base
                     , tic-tac-toe-tfd
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tic-tac-toe-tfd
